更新初始化流程相关工作